--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -6,12 +6,20 @@ html {
   scroll-behavior: smooth;
 }
 
+.green-600 {
+  background-color: #16a34a;
+}
+
 .green-500 {
   background-color: #22c55e;
 }
 
 .green-400 {
   background-color: #4ade80;
+}
+
+.yellow-600 {
+  background-color: #ca8a04;
 }
 
 .yellow-500 {
